--- a/package.json
+++ b/package.json
@@ -2,18 +2,12 @@
     "name": "laravel-auth-scaffold",
     "version": "1.0.0",
     "description": "[![Latest Version on Packagist](https://img.shields.io/packagist/v/awcodes/laravel-auth-scaffold.svg?style=flat-square)](https://packagist.org/packages/awcodes/laravel-auth-scaffold) [![GitHub Tests Action Status](https://img.shields.io/github/workflow/status/awcodes/laravel-auth-scaffold/run-tests?label=tests)](https://github.com/awcodes/laravel-auth-scaffold/actions?query=workflow%3Arun-tests+branch%3Amaster) [![Total Downloads](https://img.shields.io/packagist/dt/awcodes/laravel-auth-scaffold.svg?style=flat-square)](https://packagist.org/packages/awcodes/laravel-auth-scaffold)",
-    "devDependencies": {
-        "cross-env": "^7.0.2",
-        "laravel-mix": "^6.0.0-beta.4",
-        "tailwindcss": "^1.8.11"
-    },
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "npx mix",
+        "watch": "npx mix watch",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "npx mix -p"
     },
     "repository": {
         "type": "git",
@@ -25,5 +19,10 @@
     "bugs": {
         "url": "https://github.com/awcodes/laravel-auth-scaffold/issues"
     },
-    "homepage": "https://github.com/awcodes/laravel-auth-scaffold#readme"
+    "homepage": "https://github.com/awcodes/laravel-auth-scaffold#readme",
+    "devDependencies": {
+        "cross-env": "^7.0.2",
+        "laravel-mix": "^6.0.0-beta.4",
+        "tailwindcss": "^1.8.11"
+    }
 }
